services/ni/nijobs/02-deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nijobs-be
  namespace: nijobs
spec:
  selector:
    matchLabels:
      app: nijobs-be
  template:
    metadata:
      labels:
        app: nijobs-be
    spec:
      containers:
      - name: nijobs-be
        image: registry.niaefeup.pt/niaefeup/nijobs-be:master
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8087
      imagePullSecrets:
        - name: harbor-pull-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nijobs-locations
  namespace: nijobs
spec:
  selector:
    matchLabels:
      app: nijobs-locations
  template:
    metadata:
      labels:
        app: nijobs-locations
    spec:
      containers:
      - name: nijobs-locations
        image: registry.niaefeup.pt/niaefeup/nijobs-fe:master
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8088
      imagePullSecrets:
        - name: harbor-pull-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nijobs-fe
  namespace: nijobs
spec:
  selector:
    matchLabels:
      app: nijobs-fe
  template:
    metadata:
      labels:
        app: nijobs-fe
    spec:
      containers:
      - name: nijobs-fe
        image: registry.niaefeup.pt/niaefeup/nijobs-fe:master
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: harbor-pull-secret
