services/ni/nijobs/03-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nijobs-fe
  namespace: nijobs
spec:
  selector:
    app: nijobs-fe
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nijobs-be
  namespace: nijobs
spec:
  selector:
    app: nijobs-be
  ports:
  - port: 80
    targetPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: nijobs-locations
  namespace: nijobs
spec:
  selector:
    app: nijobs-locations
  ports:
  - port: 80
    targetPort: 8088
