services/ni/nijobs/04-ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-nijobs
  namespace: nijobs
spec:
  stripPrefix:
    prefixes:
      - "/nijobs"
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-nijobs-api
  namespace: nijobs
spec:
  stripPrefix:
    prefixes:
      - "/nijobs/api"
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-https
  namespace: nijobs
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ni.fe.up.pt`) && PathPrefix(`/nijobs/api`)
      kind: Rule
      services:
        - name: nijobs-be
          port: 80
      middlewares:
        - name: stripprefix-nijobs-api
    - match: Host(`ni.fe.up.pt`) && PathPrefix(`/nijobs/locations`)
      kind: Rule
      services:
        - name: nijobs-locations
          port: 80
      middlewares:
        - name: stripprefix-nijobs
    - match: Host(`ni.fe.up.pt`) && PathPrefix(`/nijobs`)
      kind: Rule
      services:
        - name: nijobs-fe
          port: 80
      middlewares:
        - name: stripprefix-nijobs
  tls:
    secretName: website-cert
